app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2024-03-15T15:52:11Z"
  labels:
    app: springboot-s2i
    app.kubernetes.io/component: springboot-s2i
    app.kubernetes.io/instance: springboot-s2i
    app.kubernetes.io/name: java
  name: springboot-s2i
  namespace: arij-project
  resourceVersion: "9372576"
  uid: e78fd3a4-86b0-4141-997e-a59950effd41
spec:
  clusterIP: 172.30.102.90
  clusterIPs:
  - 172.30.102.90
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: springboot-s2i
  sessionAffinity: None
  type: ClusterIP
